💄 fix overflow

--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -50,7 +50,7 @@ input {
 main {
   max-width: 67.5rem;
   margin: 4.5rem auto;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -205,7 +205,6 @@ section {
   form {
     display: flex;
     flex-wrap: wrap;
-    // flex-direction: column;
     justify-content: space-between;
     gap: 1.5rem;
     padding: 2.5rem;
@@ -243,8 +242,12 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 7rem);
+  min-height: calc(70vh - 7rem);
   padding-bottom: 0;
+
+  @include from(600) {
+    min-height: calc(100vh - 7rem);
+  }
 
   @include from(1100) {
     display: block;
